<resources>
    <string name="app_name">Tuchat</string>
    <string name="app_description">A revolutionary text messenger</string>
    <string name="please_wait_string">Attempting automatic verification…</string>

    <string name="phone_number_auth_warning">Tuchat will send you an SMS message to verify your phone number.
        Carrier charges may apply.</string>
    <string name="disclaimer">By clicking the "Start using Tuchat" button, you agree to our
        <a href="https://github.com/xwaxes01/TuchatUnofficial/wiki/Privacy-Policy">Privacy policy</a> and
        <a href="https://github.com/xwaxes01/TuchatUnofficial/wiki/Terms-of-Service">Terms of Service</a>
    </string>
    <string name="sign_in_string">Sign in</string>
    <string name="phone_number_prompt">Enter your phone number</string>
    <string name="messenger_logo">This is the messenger logo</string>
    <string name="display_name_prompt">Enter your display name</string>
    <string name="display_name_warning">This name will be displayed to other users</string>
    <string name="continue_button">Continue</string>
    <string name="contacts_request_message">Tuchat requires access to your contacts in order to show you contacts that are on Tuchat. Your contacts will be safe with us.</string>
    <string name="welcome_text">Welcome to Tuchat</string>
    <string name="sign_out_string">Sign out</string>
    <string name="settings">Settings</string>
    <string name="manual_code_entry_disclaimer">We were unable to automatically verify your phone number. A verification code was sent to you via SMS. Enter the code below.</string>
    <string name="try_sending_a_message">Try sending a message.</string>
    <string name="you_have_no_chats_yet">You have no chats yet</string>
    <string name="send_message_button_drawable">Send message button drawable</string>
    <string name="type_a_message">Type a message</string>
</resources>
