<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/messenger_logo"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="148dp" />

    <TextView
        android:id="@+id/phone_number_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/phone_number_prompt"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phone_number_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/phone_number_auth_warning"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/country_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="20dp"
        app:ccpDialog_backgroundColor="@color/colorPrimaryDark"
        app:ccpDialog_textColor="@color/colorAccent"
        app:ccp_contentColor="@color/colorText"
        app:ccp_countryPreference="ke"
        app:ccp_defaultNameCode="KE"
        app:ccp_showArrow="false"
        app:ccp_showFullName="true" />

    <EditText
        android:id="@+id/phone_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:hint="@string/phone_number_prompt"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingBottom="@dimen/text_entry_padding"
        android:textColor="@color/colorText"
        android:textColorHint="#938E8E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_sign_in_button"
            android:padding="12dp"
            android:text="@string/sign_in_string"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sign_in_button_text_size" />

        <LinearLayout
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/progress_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/please_wait_string"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>